# react-go-saas-starter

./: .bazelrc  .gitignore  BUILD  WORKSPACE  readme.md  skaffold.yaml
go/: BUILD  docker-compose.yaml  go.mod  go.sum  go_third_party.bzl  makefile
go/config/: config.go
go/id/: BUILD.bazel  id.go
go/middleware/: BUILD.bazel  auth0.go
go/svc/api/: BUILD.bazel  dockerfile  main.go  makefile
go/svc/api/config/: BUILD.bazel  config.go
go/svc/api/k8s/base/: deployment.yaml  ingress.yaml  service.yaml
go/svc/api/k8s/overlays/dev/: deployment.yaml  kustomization.yaml
go/svc/api/k8s/overlays/staging/: deployment.yaml
go/svc/api/user/: BUILD.bazel  user.go
go/user/: BUILD.bazel  memoryrepository.go  postgresrepository.go  repository.go  service.go  user.go
js/website/: package.json
js/website/src/: App.tsx  Router.tsx
js/website/src/components/nav/: Header.tsx
js/website/src/pages/: HomePage.tsx
ts/: package.json  tsconfig.json
ts/website/: .eslintrc.json  BUILD  default.conf  webpack.config.js
ts/website/k8s/base/: deployment.yaml  ingress.yaml
ts/website/k8s/overlays/dev/: deployment.yaml
ts/website/k8s/overlays/staging/: deployment.yaml  kustomization.yaml
ts/website/public/: index.html
ts/website/server/: index.tsx
ts/website/src/: App.tsx  Router.tsx  client.tsx
ts/website/src/components/nav/: Header.tsx
ts/website/src/components/user/: Profile.tsx
ts/website/src/config/: index.tsx
