load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = ["auth0.go"],
    importpath = "github.com/iv-p/react-go-saas-starter/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_dgrijalva_jwt_go//:jwt-go",
        "@com_github_dgrijalva_jwt_go//request",
    ],
)
