load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "user",
    srcs = [
        "memoryrepository.go",
        "repository.go",
        "service.go",
        "user.go",
    ],
    importpath = "github.com/iv-p/react-go-saas-starter/user",
    visibility = ["//visibility:public"],
    deps = ["//go/id"],
)
