load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "user",
    srcs = ["user.go"],
    importpath = "github.com/iv-p/react-go-saas-starter/svc/api/user",
    visibility = ["//visibility:public"],
    deps = [
        "//go/user",
        "@com_github_go_chi_chi//:chi",
        "@com_github_go_chi_render//:render",
    ],
)
